Changed 'int' -> 'integer'

--- a/tutorial/ch-basics.tex
+++ b/tutorial/ch-basics.tex
@@ -66,7 +66,7 @@ This chapter will provide an overview of \uclid{}'s type system and modelling fe
 
 Types supported by \uclid{} are of the following kinds: 
 \begin{enumerate}
-    \item \keyword{int}: the type of mathematical integers.
+    \item \keyword{integer}: the type of mathematical integers.
     \item \keyword{bool}: the Boolean type. This type has two values: \keyword{true} and \keyword{false}.
     \item \keyword{bv\textit{W}}: The family of bit-vector types parameterized by their width ($W$).
     \item \keyword{enum}: enumerated types.
