--- a/tutorial/ch-grammar.tex
+++ b/tutorial/ch-grammar.tex
@@ -249,7 +249,7 @@ And finally, we have the terminal symbols, identifiers, tuples and the if-then-e
 Supported primitive types are Booleans, integers and bit-vectors. Bit-vector types are defined according the regular expression `bv[0-9]+' and the number following `bv' is the width of the bit-vector.
 
 \begin{grammar}
-    <PrimitiveType> ::= \keywordbf{bool} | \keywordbf{int} | <BitVectorType>
+    <PrimitiveType> ::= \keywordbf{bool} | \keywordbf{integer} | <BitVectorType>
 \end{grammar}
 
 Enumerated types are defined using the \keywordbf{enum} keyword.
