--- a/tutorial/tutorial.tex
+++ b/tutorial/tutorial.tex
@@ -70,9 +70,9 @@
             for, range, skip, case, esac, init, next, control, function, procedure,
             returns, call, type, var, input, output, const, property,
             invariant, synthesis, grammar, requires, ensures, modifies, instance, axiom, 
-            enum, record, int, bool, true, false},
+            enum, record, integer, bool, true, false},
  %otherkeywords={% types
- %   int, bool, true, false,
+ %   integer, bool, true, false,
  %   bv1, bv2, bv3, bv4, bv5, bv6, bv7, bv8, bv9, bv10, bv11, bv12, bv13, bv14, bv15, 
  %   bv16, bv17, bv18, bv19, bv20, bv21, bv22, bv23, bv24, bv25, bv26, bv27, bv28, bv29, bv30, bv31, 
  %   bv32, bv33, bv34, bv35, bv36, bv37, bv38, bv39, bv40, bv41, bv42, bv43, bv44, bv45, bv46, bv47, 
