--- a/tutorial/ch-compositionality.tex
+++ b/tutorial/ch-compositionality.tex
@@ -203,5 +203,7 @@ $ uclid examples/tutorial/ex4.1-cpu.ucl
 0 assertions indeterminate.
 \end{Verbatim}
 
+Note the file \codelike{ex4.1-cpu.ucl} contains three modules. Each of these modules could potentially have \keyword{control} blocks. Which \uclid{} is invoked on this model, it executes only the \keyword{control} block of the \codelike{main} module.  If we wanted to include a \keyword{control} block for the \codelike{alu} module in order to verify properties of this module, we would have to invoke \uclid{} on this specific module using the \codelike{--main} command-line option.
+
 \subsection{Exercise: Inductive Proof of CPU model}
 Prove determinism of the CPU model using induction rather than bounded model checking. You will need to add strengthening inductive invariants relating the two CPU instances.
