--- a/tutorial/ch-introduction.tex
+++ b/tutorial/ch-introduction.tex
@@ -147,7 +147,7 @@ Error : Unable to find main module.
 
 \subsection{Running \uclid{}}
 
-Invoke \uclid{} on a model is easy. Just run the \codelike{uclid} binary and provide the file containing the model as a command-line argument. When invoked, \uclid{} looks for a module named \codelike{main} and executes the commands in its control block.\footnote{The \codelike{--main} command line argument can be used to specify a different name for the ``main'' module.} If no \codelike{main} module is found, \uclid{} will exit with an error, as we saw in the previous section when \codelike{uclid} was invoked without arguments.
+Invoke \uclid{} on a model is easy. Just run the \codelike{uclid} binary and provide a list of files containing the model as a command-line argument. When invoked, \uclid{} will parse each of these files and look for a module named \codelike{main} among them. It will execute the commands in the \codelike{main} module's control block. The \codelike{--main} command line argument can be used to specify a different name for the ``main'' module. Note only the \codelike{main} module's control blocks will be executed, even if the \codelike{main} module instantiates other modules with control blocks. If no \codelike{main} module is found, \uclid{} will exit with an error, as we saw in the previous section when \codelike{uclid} was invoked without arguments.
 
 Example~\ref{ex:fib-model} is part of the \uclid{} distribution in the \codelike{examples/tutorial/} sub-directory. You can run \uclid{} on this model as:
 
