Fixing typo in the grammar
Thanks to Cameron for finding this.

--- a/tutorial/ch-grammar.tex
+++ b/tutorial/ch-grammar.tex
@@ -88,7 +88,7 @@ followed by optional pre-/post-conditions and the list of state variables modifi
      <InstanceDecl> ::= \keywordbf{instance} <Id> `:' <Id> <ArgMapList> `;'
 
      <ArgMapList>   ::= `(' `)' 
-                    \alt `(' <ArgMap> `,' <ArgMap> `)'
+                    \alt `(' <ArgMap> `,' <ArgMapList> `)'
 
      <ArgMap> ::= <Id> `:' `(' `)' 
               \alt <Id> `:' `(' <Expr> `)'
