--- a/tutorial/tutorial.tex
+++ b/tutorial/tutorial.tex
@@ -111,7 +111,8 @@
   showspaces=false,
   showstringspaces=false,
   showtabs=false,
-  tabsize=2
+  tabsize=2,
+  frame=shadowbox
 }
 
 \begin{document}
